[gd_scene load_steps=9 format=2]

[ext_resource path="res://Demos/Blur/Ship.gd" type="Script" id=1]
[ext_resource path="res://Shared/sprites/cloud1.png" type="Texture" id=2]
[ext_resource path="res://Demos/Blur/topdown-player.svg" type="Texture" id=3]
[ext_resource path="res://Shared/environments/2d_level_environment.tres" type="Environment" id=4]









[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.152439, 0.768293, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.233643, 0.717079, 0.90625, 1, 0.868338, 0.890625, 0.177429, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.189189, 0.668919, 1 )
colors = PoolColorArray( 0.0352941, 0.243137, 0.137255, 0, 0.129171, 0.893722, 0.503214, 1, 0.129412, 0.67451, 0.72549, 1, 0.127477, 0.524653, 0.882003, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 480.0
initial_velocity_random = 0.12
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.25
scale_random = 0.11
color_ramp = SubResource( 3 )

[node name="Ship" type="Sprite"]
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="BackgroundRemoteTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../../Camera2D")

[node name="CameraBackgroundTransform" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../../Camera2D")

[node name="ParticlesCharge" type="CPUParticles2D" parent="."]
modulate = Color( 1.65, 1.65, 1.65, 1 )
position = Vector2( 0, 35 )
emitting = false
amount = 60
lifetime = 1.4
one_shot = true
randomness = 1.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 4
emission_points = PoolVector2Array( 0, -50, 0, 50, -50, 0, 50, 0, -25, -25, 25, -25, -25, 25, 25, 25 )
emission_normals = PoolVector2Array( 0, 50, 0, -50, 50, 0, -50, 0, 25, 25, -25, 25, 25, -25, -25, -25 )
emission_colors = PoolColorArray(  )
flag_align_y = true
gravity = Vector2( 0, 0 )
scale_amount = 0.25
color_ramp = SubResource( 1 )

[node name="ParticlesBoost" type="Particles2D" parent="."]
modulate = Color( 2.25, 2.25, 2.25, 1 )
position = Vector2( 0, -23 )
emitting = false
amount = 50
one_shot = true
explosiveness = 0.9
randomness = 0.89
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )
